# MATERIAL-NIX-Icons-Round

./: AUTHORS  COPYING  MATERIAL-NIX-Round.doap  MATERIAL-NIX-Round.spec  Makefile.am  README.md  configure.ac  install-icon-theme.sh  paper-icon-theme.doap  paper-icon-theme.spec
MATERIAL-NIX-Round/: index.theme
rollo/: cursor.theme  index.theme
rollo/apps/scalable/: opera-browser.svg.lnk
