AC_INIT([MATERIAL*NIX Icons Round], 1.1, [https://github.com/MATERIAL-NIX/MATERIAL-NIX-Icons-Round/issues], [MATERIAL-NIX-Icons-Round],)
AM_INIT_AUTOMAKE([-Wno-portability no-dist-gzip dist-xz foreign subdir-objects 1.9 tar-ustar])
AC_PREFIX_DEFAULT(/usr/local)
AM_SILENT_RULES([yes])


AC_CONFIG_FILES([Makefile])
AC_OUTPUT

AC_MSG_RESULT([
        MATERIAL*NIX Icons Round $VERSION
        ========

        prefix:                 ${prefix}
        exec_prefix:            ${exec_prefix}
        datarootdir:            ${datarootdir}

])